<resources>
    <string name="app_name" translatable="false">ContactX</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="initdb">Check Database</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="notes">Notes</string>
    <string name="birthday">Birthday</string>
    <string name="createcontact">Create contact</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="contactsave">Saved</string>
    <string name="avatar">Avatar</string>
    <string name="missingname">A name is required</string>
    <string name="missingNumber">A number is required</string>
    <string name="save">Save</string>
    <string name="futurebirth" translatable="false">Is that a real birthday?</string>
    <string name="refresh">Copy List</string>
    <string name="action_settings">Settings</string>
    <string name="send_message">Send message</string>
    <string name="call">Call</string>
    <string name="send_email">Send e</string>
    <string name="title_activity_contact_detail" translatable="false">Detail</string>
    <string name="perde">Permission Denied</string>
    <string name="editcontact">Edit Contact</string>
    <string name="comfirm">Yes</string>
    <string name="cancelDia">No</string>
    <string name="deletecontact">Delete contact</string>
    <string name="deleteQuestion">Delete this contact?</string>
    <string name="no_contact">No Contact</string>
    <string name="import_contact_from_system">Import system contacts</string>
    <string name="no_email">No email address</string>
    <string name="picknumber">Pick up a phone number</string>
    <string name="makeCall">Make a Call</string>
    <string name="copyright" translatable="false">©2019 Pixel Inc.</string>
    <string name="mememe" translatable="false">by 苏立洋</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="deleteHint">Long press \'pencil\' button to delete</string>
    <string name="mygmail" translatable="false">sulycarl34@gmail.com</string>
    <string name="booyah" translatable="false">Booyah!</string>
    <string name="ending" translatable="false">2020/5/1</string>
    <string name="share_contact">Share Contact</string>
    <string name="scanthis">Scan this QRCode with ContactX</string>
    <string name="foundcontact">Found contact in this QRCode</string>
    <string name="addthis">Add this contact?</string>
    <string name="add">Add</string>
    <string name="invalidqr">Invalid QRCode</string>
    <string name="not_supported_qr">This QRCode is not supported. Only the QRCode generate by ContactX is supported.</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="title_activity_settings">Settings</string>


    <!--  Preferences -->
    <string name="qr_format">QR Code format</string>
    <string name="using_base64">Using Base64 encode</string>
    <string name="using_json">Using unencrypted JSON</string>
    <string name="use_base64">Use Base64 Encryption</string>
    <string name="settings">Settings</string>
    <string name="error_action">Error occurred, check your permission settings, or this action is not supported by this system.</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="import_tutorial">Click the avatar to select</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="too_large">Data is too large,please shorten the detail.</string>
    <string name="chat">Chat</string>
    <string name="write_message">Write message</string>
    <string name="chat_server">Chat Server</string>
    <string name="chat_server_ip">Chat Server Address</string>
    <string name="char_server_port">Chat Server Port</string>
    <string name="pixelw_design" translatable="false">pixelw.design</string>
    <string name="nick_name">Nickname</string>
    <string name="me">Me</string>
    <string name="your_info">Your information will be transcode into a signature and used to match with your friends.</string>
    <string name="online">online</string>
    <string name="noinfo">Personal information not set, we need these to identify you.</string>
    <string name="failed">failed..</string>
    <string name="imported">Imported</string>
    <string name="details">details</string>
</resources>
