<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/textd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/mememe"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/textd1"
        app:layout_constraintStart_toEndOf="@id/textd1"
        android:layout_marginLeft="16dp" />

    <ImageView
        android:id="@+id/pixelAvatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/booyah"
        android:src="@drawable/pixel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myGmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/mygmail"
        app:layout_constraintEnd_toStartOf="@id/pixelAvatar"
        app:layout_constraintTop_toTopOf="@id/pixelAvatar"
        android:layout_marginRight="5dp" />

    <TextView
        android:id="@+id/textInc"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/copyright"
        app:layout_constraintEnd_toEndOf="@id/myGmail"
        app:layout_constraintTop_toBottomOf="@id/myGmail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ending"
        app:layout_constraintEnd_toEndOf="@id/myGmail"
        app:layout_constraintTop_toBottomOf="@id/textInc" />
</androidx.constraintlayout.widget.ConstraintLayout>