<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/cdntlayoutMain">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMain"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/ToolbarTheme"/>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/noContact"
        android:paddingTop="50dp"
        android:text="@string/no_contact"
        android:textSize="20sp"
        android:gravity="center"
        android:focusable="false"
        android:clickable="false"/>
    
    <com.github.clans.fab.FloatingActionMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|end"
        android:id="@+id/fab_menu"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorAccentDark"
        app:menu_icon="@drawable/ic_add_black_24dp"
        app:menu_labels_ellipsize="end"
        app:menu_labels_singleLine="true"
        app:menu_backgroundColor="#99ffffff">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccentDark"
            android:src="@drawable/ic_playlist_add_black_24dp"
            app:fab_size="mini"
            app:fab_label="@string/createcontact" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccentDark"
            android:src="@drawable/ic_scan_black_24dp"
            app:fab_size="mini"
            app:fab_label="@string/scan_qr" />

    </com.github.clans.fab.FloatingActionMenu>

    
    

</androidx.coordinatorlayout.widget.CoordinatorLayout>