<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/AppBarAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_close_black_24dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/ToolbarTheme" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".AddUserActivity">

            <android.support.design.card.MaterialCardView
                android:id="@+id/add_nameCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="1dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintTop_toTopOf="parent">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:columnCount="8">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_face_black_24dp" />

                    <EditText
                        android:id="@+id/nameAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="7"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@id/lastNameAdd"
                        android:singleLine="true" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_subdirectory_arrow_right_black_24dp" />

                    <EditText
                        android:id="@+id/lastNameAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="7"
                        android:hint="@string/last_name"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@id/numAdd"
                        android:singleLine="true" />
                </GridLayout>
            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                android:id="@+id/add_numCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="1dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintTop_toBottomOf="@+id/add_nameCard">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:columnCount="8">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_phone_iphone_black_24dp" />

                    <EditText
                        android:id="@+id/numAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="7"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:nextFocusForward="@id/num2Add"
                        android:singleLine="true" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_phone_black_24dp" />

                    <EditText
                        android:id="@+id/num2Add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="7"
                        android:hint="@string/telephone_number"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:nextFocusForward="@id/emailAdd"
                        android:singleLine="true" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_mail_outline_black_24dp" />

                    <EditText
                        android:id="@+id/emailAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="7"
                        android:hint="@string/email_address"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@id/noteAdd"
                        android:singleLine="true" />
                </GridLayout>
            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                android:id="@+id/add_otherCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="1dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintTop_toBottomOf="@+id/add_numCard">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:columnCount="8">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginTop="14dp"
                        android:src="@drawable/ic_date_range_black_24dp" />

                    <TextView
                        android:id="@+id/dateAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="7"
                        android:layout_margin="12dp"
                        android:background="@drawable/rounded_rect"
                        android:hint="@string/birthday"
                        android:padding="5dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="32dp"
                        android:src="@drawable/ic_format_list_bulleted_black_24dp" />

                    <EditText
                        android:id="@+id/noteAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="7"
                        android:hint="@string/notes"
                        android:lines="3" />
                </GridLayout>
            </android.support.design.card.MaterialCardView>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>

